# fastapi-celery-rabbitmq-application

./: .dockerignore  .gitignore  Dockerfile  celery.db  celery.sqlite  celery_workers.sh  docker-compose.yaml  flower.sqlite  kill_all_workers.sh  main.py  pyproject.toml  supervisord.conf
celery_tasks/: tasks.py
config/: celery_config.py  celery_utils.py
routers/: universities.py
