[tool.poetry]
name = "celery_rabbitmq"
version = "0.1.0"
description = "Job processing using Fast API, Celery, and RabbitMQ"
authors = ["Tom Scott <tscott@stratanetworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
celery = "^5.2.7"
flower = "^1.2.0"
httpx = "^0.23.0"
SQLAlchemy = "^1.4.41"
requests = "^2.28.1"
supervisor = "^4.2.4"
postgres = "^4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
flake8-docstrings = "^1.6.0"
mypy = "^0.971"
flake8-comprehensions = "^3.10.0"
darglint = "^1.8.1"
flake8-fastapi = "^0.7.0"
flake8-bandit = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
